--- a/index.html
+++ b/index.html
@@ -1,4 +1,15 @@
-<div class="game-container">
+<!DOCTYPE html>
+<html lang="en">
+
+  <head>
+    <meta charset="UTF-8">
+    <title>Untitled</title>
+    <link rel="stylesheet" href="./style.css">
+
+  </head>
+    
+  <body>
+  <div class="game-container">
   <h1>Rock – Paper – Scissors – Lizard – Spock</h1>
 
   <div class="choices">
@@ -15,3 +26,8 @@
     <h2 id="final-result">Ready?</h2>
   </div>
 </div>
+    <script  src="./script.js"></script>
+
+  </body>
+  
+</html>
