--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
     <p id="cpu">CPU is waiting...</p>
     <p id="player">Player hasn't chosen yet</p>
     <h2 id="final-result">Ready?</h2>
+
+    <hr />
+
+    <h3>📊 Game Stats</h3>
+    <p id="wins">Wins: 0</p>
+    <p id="losses">Losses: 0</p>
+    <p id="draws">Draws: 0</p>
+    <p id="winrate">Win Rate: 0%</p>
   </div>
 </div>
     <script  src="./script.js"></script>
